Added basic navigation bar styles

--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@
 * {
     font-family: Poppins;
 }
+
+.navbar-content {
+    background: #47321a;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 3vw;
+}
