--- a/style.css
+++ b/style.css
@@ -12,3 +12,12 @@
     align-items: center;
     padding: 0 3vw;
 }
+
+.navbar-content {
+    color: white;
+}
+
+.nav-link {
+    color: white;
+    text-decoration: none;
+}
