--- a/style.css
+++ b/style.css
@@ -13,24 +13,36 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 3vw;
-}
-
-.navbar-content {
     color: white;
 }
 
 ul {
     list-style: none;
-
     display: flex;
     flex-direction: row;
-}
-
-li {
-    padding-left: 5vw;
-}
-
-.nav-link {
     color: white;
+    justify-content: space-between;
+
+
+    height: 5vh;
+
+}
+li {
+    height: 100%;
+}
+
+.nav-link{
+    display: flex;
     text-decoration: none;
+    color: white;
+    padding:0 3vw;
+    align-items: center;
+    height: 100%;
+}
+
+.nav-link:hover {
+    background: #c8914b;
+    border: none;
+    border-radius: 3vh;
+    color: black;
 }
