--- a/style.css
+++ b/style.css
@@ -42,14 +42,16 @@ li {
     text-decoration: none;
     color: white;
     padding:0 2vw;
+    margin: 0 0.5vw;
     align-items: center;
+    border-radius: 3vh;
     height: 100%;
+    transition: 0.6s;
 }
 
 .nav-link:hover {
     background: var(--add);
     border: none;
-    border-radius: 3vh;
     color: black;
 }
 
@@ -97,7 +99,9 @@ li {
     padding: 0 3vw;
     border-radius: 3vw;
     font-size: var(--small);
+    font-weight: 700;
     margin-right: 2vw;
+    transition: 0.6s;
 }
 
 .hero-btn:hover {
