--- a/style.css
+++ b/style.css
@@ -109,3 +109,12 @@ li {
     border:2px solid var(--add);
     color: black;
 }
+
+/* About Us section */
+.about-us {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1vh 1vw;
+    background: var(--bg-odd);
+}
