--- a/style.css
+++ b/style.css
@@ -115,6 +115,19 @@ li {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 1vh 1vw;
+    padding: 5vh 1vw;
     background: var(--bg-odd);
+}
+
+.about-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0 5vw;
+}
+
+.about-img {
+    padding: 0 5vw;
+    width: 30vw;
 }
