--- a/style.css
+++ b/style.css
@@ -152,3 +152,13 @@ span {
     position: relative;
     margin-top: -1.5vw;
 }
+
+/* Menu Section */
+.menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: var(--bg-even);
+}
+
