--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ li {
 .hero-discription {
     color: white;
     font-size: var(--small);
+    margin-top: 1vw;
 }
 
 .hero-btn {
@@ -106,6 +107,7 @@ li {
     font-size: var(--small);
     font-weight: 700;
     margin-right: 2vw;
+    margin-top: 2vw;
     transition: 0.6s;
 }
 
