--- a/style.css
+++ b/style.css
@@ -217,3 +217,9 @@ span {
     flex-direction: row;
     justify-content: space-around;
 }
+
+.brand-img {
+    width: calc(100%/5);
+    padding: 1vw 2vw;
+    opacity: 50%;
+}
