--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ span {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 3vw 0;
 }
 
 .brand-images {
@@ -222,4 +223,8 @@ span {
     width: calc(100%/5);
     padding: 1vw 2vw;
     opacity: 50%;
+}
+
+.brand-heading {
+    font-size: var(--medium);
 }
