--- a/style.css
+++ b/style.css
@@ -257,3 +257,8 @@ span {
     color: white;
     font-size: var(--medium);
 }
+
+.gallery-img:hover {
+    box-shadow: 0 0 50px #c8914b;
+    transition: 0.3s;
+}
