--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ li {
     color: white;
     font-size: var(--small);
     margin-top: 1vw;
+    line-height: 2vw;
 }
 
 .hero-btn {
@@ -148,6 +149,7 @@ li {
     color: white;
     font-size: var(--small);
     margin-top: 3vw;
+    line-height: 2vw;
 }
 
 span {
@@ -202,6 +204,7 @@ span {
     padding: 0 1vw;
     color: white;
     font-size: var(--small);
+    line-height: 2vw;
 }
 
 /* Brand Section */
@@ -243,14 +246,14 @@ span {
 .gallery-images {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 1.5vw;
+    gap: 1vw;
     margin: 4vw 0;
 }
 
 .gallery-img {
     width: 20vw;
     height: 13vw;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .gallery-heading {
@@ -259,6 +262,6 @@ span {
 }
 
 .gallery-img:hover {
-    box-shadow: 0 0 50px #c8914b;
+    box-shadow: 0 0 2vw #c8914b;
     transition: 0.3s;
 }
