--- a/style.css
+++ b/style.css
@@ -272,5 +272,30 @@ span {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.contact-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.contact-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.contact-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
