--- a/style.css
+++ b/style.css
@@ -305,7 +305,8 @@ span {
 }
 
 .gallery-img:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
+    z-index: 10;
 }
 
 .gallery-heading {
@@ -366,7 +367,8 @@ span {
 }
 
 .contact-discription:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
+    color: var(--add);
 }
 
 .form {
